[hide] Prevent scene error message from overflowing too much

--- a/bin/style.less
+++ b/bin/style.less
@@ -471,6 +471,9 @@ input[type=checkbox] {
 		padding-bottom: 1em;
 		text-align: center;
 
+		max-height: 50%;
+		overflow-y: auto;
+
 		font-weight: bold;
 		font-family: 'Inter';
 	}
